# OpenMind

./: CLAUDE.md  CURRENT_STATUS.md  README.md  STARTUP_STATUS.md  UPDATE_COMPLETE.md  install.sh  package.json  pnpm-lock.yaml
diagnostics/: curlllama.sh  sync-ollama-models.sh  test-opencode-ollama.sh
docs/: AI_COMPONENTS_CATALOG.md  BOARDROOM.md  DOJO.md  INDEX.md  OPENCODE_MANUAL.md  PROJECT_SUMMARY.md  RESEARCH_OPENCODE_ACP_OLLAMA.md  ROADMAP.md  SETTINGS.md  SETUP_COMPLETE.md  SYNC_SCRIPT_README.md  TECHNICAL.md  USAGE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/boardroom/: BoardroomPage.css  BoardroomPage.tsx  boardroom-client.ts  boardroom-types.ts  index.ts
src/boardroom/components/: AgentPanel.css  AgentPanel.tsx  BoardroomInput.css  BoardroomInput.tsx  ConsensusPanel.css  ConsensusPanel.tsx
src/components/: Button.css  Button.tsx  ConnectionStatus.css  ConnectionStatus.tsx  DiagnosticsPage.tsx  FloatingChat.css  FloatingChat.tsx  Layout.css  Layout.tsx  MarkdownMessage.tsx  ModelPicker.css  ModelPicker.tsx  ModelsPage.tsx  NavBar.css  NavBar.tsx  Panel.css  Panel.tsx  QuitButton.css  QuitButton.tsx  SettingsPage.tsx  index.ts
src/dojo/: DojoPage.css  DojoPage.tsx  dojo-client.ts  dojo-types.ts  index.ts
src/dojo/components/: DojoInput.css  DojoInput.tsx  ModelPanel.css  ModelPanel.tsx  Scoreboard.css  Scoreboard.tsx
src/lib/: ollama-client.ts  opencode-client.ts
